# cognitive-science-society

./: .env.template  README.md  cognitive_science_society_scraper.py  database_setup.py  pyproject.toml  settings.py
